cluster/apps/authentification/authelia/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-auth
  namespace: network-system
spec:
  forwardAuth:
    address: 'http://authelia.network-system.svc.cluster.local:9091/api/verify?rd=https://auth.${SECRET_DOMAIN_NAME}'
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups
