cluster/apps/authentification/authelia/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-auth
  namespace: network-system
spec:
  forwardAuth:
    address: 'http://authelia.network-system.svc.cluster.local:9091/api/verify?rd=https://auth.${SECRET_DOMAIN_NAME}'
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia-headers
  namespace: network-system
spec:
  headers:
    browserXssFilter: true
    customFrameOptionsValue: "SAMEORIGIN"
    customResponseHeaders:
      Cache-Control: "no-store"
      Pragma: "no-cache"
